# arm32_cpu

./: Cargo.toml  README.md
src/: arm.rs  lib.rs  thumb.rs
tests/data/: Makefile  emutest_arm9.S  emutest_thm9.S
